--- a/FREDDIEMAC_dataloaders.ipynb
+++ b/FREDDIEMAC_dataloaders.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +89,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_orig = dd.read_parquet(data_folder + \"/cleaned_sample_orig_*.parquet.gzip\")\n",
-    "#df_perf = dd.read_parquet(data_folder + \"/cleaned_sample_svcg_*.parquet.gzip\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,16 +97,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "blumenstock_types = {'LOAN_SEQUENCE_NUMBER': str, 'ORIGINAL_INTEREST_RATE': float, 'ORIGINAL_UPB': float, 'CREDIT_SCORE': float,\n",
-    "                    'DTI': float, 'LTV': float, 'FIRST_PAYMENT_DATE': str, 'BAL_REPAID': float, 'T_ACT_12M': float, 'T_DEL_30D': float, \n",
-    "                    'T_DEL_60D': float, 'LABEL': str, 'REMAINING_MONTHS_TO_LEGAL_MATURITY': float, 'TOTAL_OBSERVED_LENGTH': float}\n",
+    "blumenstock_types = {'LOAN_SEQUENCE_NUMBER': str, 'INT_RATE': float, 'ORIG_UPB': float, 'FICO_SCORE': float,\n",
+    "                    'DTI_R': float, 'LTV_R': float, 'FIRST_PAYMENT_DATE': str, 'BAL_REPAID': float, 'T_ACT_12M': float, 'T_DEL_30D': float, \n",
+    "                    'T_DEL_60D': float, 'LABEL': str, 'REMAINING_MONTHS_TO_LEGAL_MATURITY': float, \"TIME_TO_EVENT\": float, 'TOTAL_OBSERVED_LENGTH': float}\n",
     "\n",
-    "df_blumenstock = dd.read_parquet(data_folder + \"/cleaned_blumenstock_*.parquet.gzip\")\n",
+    "df_blumenstock = dd.read_parquet(data_folder + \"/blumenstock_labeled_sample_orig_*.parquet.gzip\")\n",
     "df_blumenstock = df_blumenstock.astype(blumenstock_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1407.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_blumenstock[\"TOTAL_OBSERVED_LENGTH\"].max().compute()"
    ]
   },
   {
@@ -137,14 +138,396 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask.dataframe as dd\n",
+    "blumenstock_dynamic_types = {'LOAN_SEQUENCE_NUMBER': str, 'MONTHLY_REPORTING_PERIOD': str,'CURRENT_ACTUAL_UPB': float, 'CURRENT_LOAN_DELINQUENCY_STATUS': float, \n",
+    "                    'CURRENT_INTEREST_RATE':float,'ELTV': float ,'LOAN_AGE': float, 'REMAINING_MONTHS_TO_LEGAL_MATURITY': float, 'CREDIT_SCORE': float,\n",
+    "                    'DTI': float, 'LTV': float, 'BAL_REPAID': float, \n",
+    "                    'LABEL': str, \"TIME_TO_EVENT\": float, 'ORIGINAL_INTEREST_RATE': float, 'ORIGINAL_UPB': float, 'TOTAL_OBSERVED_LENGTH': float}\n",
     "\n",
-    "df_orig = dd.read_parquet(data_folder + \"/blumenstock_dynamic_orig_*.parquet.gzip\")\n",
-    "df_perf = dd.read_parquet(data_folder + \"/blumenstock_dynamic_perf_*.parquet.gzip\")"
+    "df_blumenstock_dynamic = dd.read_parquet(data_folder + \"/blumenstock_dynamic_labeled_sample_orig_*.parquet.gzip\")\n",
+    "df_blumenstock_dynamic = df_blumenstock_dynamic.astype(blumenstock_dynamic_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0110334    5628\n",
+       "Name: LOAN_SEQUENCE_NUMBER, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_blumenstock_dynamic[df_blumenstock_dynamic[\"TOTAL_OBSERVED_LENGTH\"] == 1407][\"LOAN_SEQUENCE_NUMBER\"].value_counts().compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df_blumenstock_dynamic[df_blumenstock_dynamic[\"LOAN_SEQUENCE_NUMBER\"] == \"0110334\"].compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CURRENT_INTEREST_RATE</th>\n",
+       "      <th>ELTV</th>\n",
+       "      <th>CURRENT_ACTUAL_UPB</th>\n",
+       "      <th>CURRENT_LOAN_DELINQUENCY_STATUS</th>\n",
+       "      <th>MONTHLY_REPORTING_PERIOD</th>\n",
+       "      <th>REMAINING_MONTHS_TO_LEGAL_MATURITY</th>\n",
+       "      <th>LOAN_AGE</th>\n",
+       "      <th>TOTAL_OBSERVED_LENGTH</th>\n",
+       "      <th>TIME_TO_EVENT</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>LOAN_SEQUENCE_NUMBER</th>\n",
+       "      <th>ORIGINAL_INTEREST_RATE</th>\n",
+       "      <th>ORIGINAL_UPB</th>\n",
+       "      <th>CREDIT_SCORE</th>\n",
+       "      <th>DTI</th>\n",
+       "      <th>LTV</th>\n",
+       "      <th>BAL_REPAID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1133781</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>201302</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>106000.0</td>\n",
+       "      <td>802.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133782</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>201302</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.375</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>743.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2.208333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133783</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>201302</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>4.250</td>\n",
+       "      <td>283000.0</td>\n",
+       "      <td>771.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.374558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133784</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>201302</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>242000.0</td>\n",
+       "      <td>727.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>0.438017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1133785</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>106000.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>201302</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>106000.0</td>\n",
+       "      <td>802.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139404</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>123826.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>242000.0</td>\n",
+       "      <td>727.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>0.511679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139405</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>123826.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>106000.0</td>\n",
+       "      <td>802.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.168173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139406</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>123826.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.375</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>743.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2.579715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139407</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>123826.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>4.250</td>\n",
+       "      <td>283000.0</td>\n",
+       "      <td>771.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.437549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1139408</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>123826.34</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>202112</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0110334</td>\n",
+       "      <td>3.500</td>\n",
+       "      <td>242000.0</td>\n",
+       "      <td>727.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>0.511679</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5628 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         CURRENT_INTEREST_RATE  ELTV  CURRENT_ACTUAL_UPB  \\\n",
+       "1133781                    3.5   NaN           106000.00   \n",
+       "1133782                    3.5   NaN           106000.00   \n",
+       "1133783                    3.5   NaN           106000.00   \n",
+       "1133784                    3.5   NaN           106000.00   \n",
+       "1133785                    3.5   NaN           106000.00   \n",
+       "...                        ...   ...                 ...   \n",
+       "1139404                    3.5  19.0           123826.34   \n",
+       "1139405                    3.5  19.0           123826.34   \n",
+       "1139406                    3.5  19.0           123826.34   \n",
+       "1139407                    3.5  19.0           123826.34   \n",
+       "1139408                    3.5  19.0           123826.34   \n",
+       "\n",
+       "         CURRENT_LOAN_DELINQUENCY_STATUS MONTHLY_REPORTING_PERIOD  \\\n",
+       "1133781                              0.0                   201302   \n",
+       "1133782                              0.0                   201302   \n",
+       "1133783                              0.0                   201302   \n",
+       "1133784                              0.0                   201302   \n",
+       "1133785                              0.0                   201302   \n",
+       "...                                  ...                      ...   \n",
+       "1139404                              0.0                   202112   \n",
+       "1139405                              0.0                   202112   \n",
+       "1139406                              0.0                   202112   \n",
+       "1139407                              0.0                   202112   \n",
+       "1139408                              0.0                   202112   \n",
+       "\n",
+       "         REMAINING_MONTHS_TO_LEGAL_MATURITY  LOAN_AGE  TOTAL_OBSERVED_LENGTH  \\\n",
+       "1133781                               360.0       0.0                 1407.0   \n",
+       "1133782                               360.0       0.0                 1407.0   \n",
+       "1133783                               360.0       0.0                 1407.0   \n",
+       "1133784                               360.0       0.0                 1407.0   \n",
+       "1133785                               360.0       0.0                 1407.0   \n",
+       "...                                     ...       ...                    ...   \n",
+       "1139404                                83.0      97.0                 1407.0   \n",
+       "1139405                                83.0      97.0                 1407.0   \n",
+       "1139406                                83.0      97.0                 1407.0   \n",
+       "1139407                                83.0      97.0                 1407.0   \n",
+       "1139408                                83.0      97.0                 1407.0   \n",
+       "\n",
+       "         TIME_TO_EVENT LABEL LOAN_SEQUENCE_NUMBER  ORIGINAL_INTEREST_RATE  \\\n",
+       "1133781         1407.0     0              0110334                   3.500   \n",
+       "1133782         1407.0     0              0110334                   3.375   \n",
+       "1133783         1407.0     0              0110334                   4.250   \n",
+       "1133784         1407.0     0              0110334                   3.500   \n",
+       "1133785         1407.0     0              0110334                   3.500   \n",
+       "...                ...   ...                  ...                     ...   \n",
+       "1139404         1407.0     0              0110334                   3.500   \n",
+       "1139405         1407.0     0              0110334                   3.500   \n",
+       "1139406         1407.0     0              0110334                   3.375   \n",
+       "1139407         1407.0     0              0110334                   4.250   \n",
+       "1139408         1407.0     0              0110334                   3.500   \n",
+       "\n",
+       "         ORIGINAL_UPB  CREDIT_SCORE   DTI   LTV  BAL_REPAID  \n",
+       "1133781      106000.0         802.0  31.0  90.0    1.000000  \n",
+       "1133782       48000.0         743.0  25.0  75.0    2.208333  \n",
+       "1133783      283000.0         771.0  30.0  80.0    0.374558  \n",
+       "1133784      242000.0         727.0  45.0  68.0    0.438017  \n",
+       "1133785      106000.0         802.0  31.0  90.0    1.000000  \n",
+       "...               ...           ...   ...   ...         ...  \n",
+       "1139404      242000.0         727.0  45.0  68.0    0.511679  \n",
+       "1139405      106000.0         802.0  31.0  90.0    1.168173  \n",
+       "1139406       48000.0         743.0  25.0  75.0    2.579715  \n",
+       "1139407      283000.0         771.0  30.0  80.0    0.437549  \n",
+       "1139408      242000.0         727.0  45.0  68.0    0.511679  \n",
+       "\n",
+       "[5628 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test"
    ]
   }
  ],
