--- a/main_FREDDIEMAC.ipynb
+++ b/main_FREDDIEMAC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,6 @@
     "%autoreload 2\n",
     "\n",
     "import os\n",
-    "import pandas as pd\n",
     "import glob\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +51,7 @@
     "              'PROPERTY_VALUATION_METHOD':str, 'IO_INDICATOR':str}\n",
     "\n",
     "mutated_orig_types = raw_orig_types.copy()\n",
+    "mutated_orig_types['ORIGINAL_LOAN_SEQUENCE_NUMBER'] = str\n",
     "\n",
     "orig_dates = ['FIRST_PAYMENT_DATE', 'MATURITY_DATE']\n",
     "\n",
@@ -82,6 +82,7 @@
     "\n",
     "mutated_perf_types = raw_perf_types.copy()\n",
     "mutated_perf_types['CURRENT_LOAN_DELINQUENCY_STATUS'] = float\n",
+    "mutated_perf_types['ORIGINAL_LOAN_SEQUENCE_NUMBER'] = str\n",
     "\n",
     "\n",
     "\n",
@@ -109,20 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from FREDDIEMAC_classification import assign_labels_to_orig, assign_labels_to_perf, cutoff_sequence_according_to_label\n",
-    "from FREDDIEMAC_reducing import drop_short_sequences\n",
+    "from FREDDIEMAC_reducing import drop_short_sequences, select_specific_original_loan_term\n",
     "\n",
     "offline_preprocessed_orig_filename = \"/sample_orig_*.parquet.gzip\"\n",
     "offline_preprocessed_perf_filename = \"/sample_svcg_*.parquet.gzip\"\n",
@@ -135,11 +128,13 @@
     "for path_orig, path_perf  in annual_dataset_iterator:\n",
     "    annual_dataset_iterator.set_description(\"Working on %s and %s\" % (Path(path_orig).stem, Path(path_perf).stem))\n",
     "\n",
-    "    annual_df_orig = pd.read_parquet(path_orig)\n",
+    "    annual_df_orig = dd.read_parquet(path_orig)\n",
     "    annual_df_orig = annual_df_orig.astype(mutated_orig_types)\n",
     "\n",
-    "    annual_df_perf = pd.read_parquet(path_perf)\n",
+    "    annual_df_perf = dd.read_parquet(path_perf)\n",
     "    annual_df_perf = annual_df_perf.astype(mutated_perf_types)\n",
+    "\n",
+    "    annual_df_orig, annual_df_perf = select_specific_original_loan_term(annual_df_orig, annual_df_perf, loan_terms_list=[180])\n",
     "\n",
     "    annual_df_orig = assign_labels_to_orig(annual_df_orig, annual_df_perf)\n",
     "    annual_df_perf = assign_labels_to_perf(annual_df_orig, annual_df_perf)\n",
@@ -159,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,35 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'ORIGINAL_LOAN_SEQUENCE_NUMBER'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\marij\\miniconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2890\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2891\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2892\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'ORIGINAL_LOAN_SEQUENCE_NUMBER'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-c6d91a5fe7ce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_perf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ORIGINAL_LOAN_SEQUENCE_NUMBER\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_orig\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"ORIGINAL_LOAN_SEQUENCE_NUMBER\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnunique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\marij\\miniconda3\\lib\\site-packages\\dask\\dataframe\\core.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4439\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4440\u001b[0m             \u001b[1;31m# error is raised from pandas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4441\u001b[1;33m             \u001b[0mmeta\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_meta\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0m_extract_meta\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4442\u001b[0m             \u001b[0mdsk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpartitionwise_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moperator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetitem\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4443\u001b[0m             \u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHighLevelGraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_collections\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdsk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdependencies\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\marij\\miniconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2900\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2901\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2902\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2903\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2904\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\marij\\miniconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2891\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2892\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2893\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2894\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2895\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'ORIGINAL_LOAN_SEQUENCE_NUMBER'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df_perf[\"ORIGINAL_LOAN_SEQUENCE_NUMBER\"].nunique().compute())\n",
     "print(df_orig[\"ORIGINAL_LOAN_SEQUENCE_NUMBER\"].nunique().compute())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_orig[\"ORIGINAL_LOAN_TERM\"].value_counts().compute()"
    ]
   },
   {
@@ -227,10 +208,10 @@
     "for path_orig, path_perf  in annual_dataset_iterator:\n",
     "    annual_dataset_iterator.set_description(\"Working on %s and %s\" % (Path(path_orig).stem, Path(path_perf).stem))\n",
     "\n",
-    "    annual_df_orig = pd.read_parquet(path_orig)\n",
+    "    annual_df_orig = dd.read_parquet(path_orig)\n",
     "    annual_df_orig = annual_df_orig.astype(mutated_orig_types)\n",
     "\n",
-    "    annual_df_perf = pd.read_parquet(path_perf)\n",
+    "    annual_df_perf = dd.read_parquet(path_perf)\n",
     "    annual_df_perf = annual_df_perf.astype(mutated_perf_types)\n",
     "\n",
     "    shortened_annual_df_perf = reduce_length_of_sequence(annual_df_perf, length=12)\n",
@@ -252,6 +233,15 @@
     "\n",
     "df_blumenstock = dd.read_parquet(data_folder + \"/blumenstock_labeled_sample_orig_*.parquet.gzip\")\n",
     "df_blumenstock = df_blumenstock.astype(blumenstock_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_blumenstock.columns"
    ]
   },
   {
@@ -280,10 +270,10 @@
     "for path_orig, path_perf  in annual_dataset_iterator:\n",
     "    annual_dataset_iterator.set_description(\"Working on %s and %s\" % (Path(path_orig).stem, Path(path_perf).stem))\n",
     "\n",
-    "    annual_df_orig = pd.read_parquet(path_orig)\n",
+    "    annual_df_orig = dd.read_parquet(path_orig)\n",
     "    annual_df_orig = annual_df_orig.astype(mutated_orig_types)\n",
     "\n",
-    "    annual_df_perf = pd.read_parquet(path_perf)\n",
+    "    annual_df_perf = dd.read_parquet(path_perf)\n",
     "    annual_df_perf = annual_df_perf.astype(mutated_perf_types)\n",
     "\n",
     "    df_blumenstock_dynamic = aggregate_to_blumenstock_exp4_dynamic(annual_df_orig, annual_df_perf)\n",
@@ -312,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_blumenstock_dynamic.head(10)"
+    "df_blumenstock_dynamic.head(100)"
    ]
   }
  ],
